Finished intially refactoring parser, good enough for now.