@@ -3,7 +3,6 @@ package org.ntnu.IDATA2003.mappe5;
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.IOException;
-import java.io.InputStream;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
@@ -11,7 +10,6 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
-import org.ntnu.IDATA2003.mappe5.Ui.ChaosGameUi;
 
 /**
  * Represents a class that handles the game files, including reading from and too a given file.
@@ -20,11 +18,14 @@ public class ChaosGameFileHandler {
 
   ArrayList<ChaosGameDescription> chaosGames;
 
+  TransformsParser parser;
+
   /**
    * Empty constructor.
    */
   public ChaosGameFileHandler() {
     chaosGames = new ArrayList<>();
+    parser = new TransformsParser();
 
   }
 
@@ -51,14 +52,17 @@ public class ChaosGameFileHandler {
 
     try (BufferedReader reader = Files.newBufferedReader(pathOfFile)) {
       String text;
-      //TODO add check for file contents
+
       while ((text = reader.readLine()) != null) {  //Removes comments if any on each line of the values.
         String[] textDelimit = text.split("#");
         fileContent.add(textDelimit[0]);
       }
-      minimumCoords = this.getVectorFromFileContents(fileContent.get(1));
-      maximumCoords = this.getVectorFromFileContents(fileContent.get(2));
-      transforms.addAll(this.getTransformsFromFileContents(fileContent));
+      if (fileContent.get(3) == null){
+        throw new NumberFormatException("Could not read the transforms from the file.");
+      }
+      minimumCoords = parser.getVectorFromString(fileContent.get(1));
+      maximumCoords = parser.getVectorFromString(fileContent.get(2));
+      transforms.addAll(this.getTransformsFromStrings(fileContent));
 
     } catch (IOException e) {
       throw new IllegalArgumentException("File with this name could not be found " + e.getMessage());
@@ -79,15 +83,15 @@ public class ChaosGameFileHandler {
    * @param fileContent The content of the file to be turned into transforms.
    * @return The list of transforms.
    */
-
-  private ArrayList<Transform2D> getTransformsFromFileContents(ArrayList<String> fileContent){
+  private ArrayList<Transform2D> getTransformsFromStrings(ArrayList<String> fileContent){
     ArrayList<Transform2D> transforms = new ArrayList<>();
-    String typeOfTransf =  this.cleanString(fileContent.get(0));
+    String typeOfTransf =  parser.cleanString(fileContent.getFirst());
+    List<String> parseString = fileContent.subList(3, fileContent.size());
     if (typeOfTransf.equals("Affine2D")) {
-      transforms.addAll(parseAffineTransforms(fileContent));
+      transforms.addAll(parser.parseAffineTransforms(parseString));
     }
     if (typeOfTransf.equals("Julia")) {
-      transforms.addAll(this.parseJuliaTransforms(fileContent.get(3)));
+      transforms.addAll(parser.parseJuliaTransforms(fileContent.get(3)));
     }
     return transforms;
   }
@@ -99,7 +103,7 @@ public class ChaosGameFileHandler {
   public void writeToFile(ChaosGameDescription description) {
     Path pathOfFile;
     if(description == null ){
-      throw new IllegalArgumentException("one of the values in the description is null");
+      throw new IllegalArgumentException("Description cannot be null");
     }
 
     if ( !description.getName().isBlank() ) {
@@ -122,16 +126,9 @@ public class ChaosGameFileHandler {
 
   }
 
-  /**
-   * Takes a @ChaosGameDescription, gets all the transforms and parses them to a string depending
-   * on which type of transform is relevant.
-   * @param description The chaos game description to be
-   * @return
-   */
-
 
   /**
-   * Turns the information of the chaosgame description into writable strings and returns it.
+   * Turns the information of the ChaosGame description into writable strings and returns it.
    * <ul>
    *   <li>The first element of the list is a un-appended name of the transform, used to compare what type of transform
    *   that is being read.</li>
@@ -140,10 +137,13 @@ public class ChaosGameFileHandler {
    *   <li>Fourth element is the maximum coordinates of the transformation.</li>
    * </ul>
    * @param description the chaos game description to be turned into strings.
-   * @return
+   * @return transformInfo
    */
   private ArrayList<String> getChaosGameInfoAsString(ChaosGameDescription description) {
     //TODO use stringbuilder instead.
+    if (description == null){
+      throw new IllegalArgumentException("description cannot be null");
+    }
     ArrayList<String> transformInfo = new ArrayList<>();
     String transform = description.getTransform(0).getClass().getSimpleName().replaceAll("Transform", "");
     String compare = new String(transform);
@@ -186,73 +186,4 @@ public class ChaosGameFileHandler {
     return matrices;
   }
 
-  /**
-   * Parses the affine transforms from the file content.
-   *
-   * @param fileContent the content of the file.
-   * @return a list of affine transforms.
-   */
-  public List<AffineTransform2D> parseAffineTransforms(ArrayList<String> fileContent) {
-    ArrayList<Double> transfValues
-        = new ArrayList<>();              //Matrix value, shortened for legibility
-    //TODO: make sure fileContent has the right content
-    List<AffineTransform2D> affineTransf = new ArrayList<>();
-    for (int i = 3; i < fileContent.size(); i++) {
-      String[] transforms = fileContent.get(i).split(",");
-      for (String value : transforms) {
-        transfValues.add(Double.parseDouble(value));
-      }
-
-      affineTransf.add(new AffineTransform2D(
-          new Matrix2x2(transfValues.get(0), transfValues.get(1), transfValues.get(2),
-                        transfValues.get(3)), // first four values contain the matrix
-          new Vector2D(transfValues.get(4),
-                       transfValues.get(5))));  // last two values contain the vector.
-      transfValues.clear();
-    }
-    return affineTransf;
-  }
-
-  /**
-   * Takes in a dirty string filled with spaces and removes them.
-   * @param dirtyString the string to be cleaned of spaces.
-   * @return the clean string.
-   */
-  private String cleanString(String dirtyString){
-    return dirtyString.replaceAll("\\s", "");
-  }
-
-  /**
-   * Parses a julia complex string containing one complex number into two distinct transforms with inverted signs.
-   * @param juliaComplex the String containing the Julia transform values.
-   * @return the list of Julia transforms.
-   */
-  private List<JuliaTransform> parseJuliaTransforms(String juliaComplex) {
-    ArrayList<JuliaTransform> transforms = new ArrayList<>();
-    juliaComplex = cleanString(juliaComplex);
-    String[] juliaValues = juliaComplex.split(",");
-    double real = Double.parseDouble(juliaValues[0]);
-    double imag = Double.parseDouble(juliaValues[1]);
-
-    Complex complex = new Complex(real, imag);
-    transforms.add(new JuliaTransform(complex, 1));
-    transforms.add(new JuliaTransform(complex, -1));
-
-    return transforms;
-  }
-
-  /**
-   * Gets a line of text, delimits it on ',' and returns the two values as a vector2D.
-   *
-   * @param content the string to be parsed.
-   * @return A vector2D containing the values from the string.
-   */
-  private Vector2D getVectorFromFileContents(String content) {
-
-    String[] maxCoords = content.split(",");
-   double x = Double.parseDouble(maxCoords[0]);
-   double y = Double.parseDouble(maxCoords[1]);
-    return new Vector2D(x, y);
-
-  }
 }
